# HBGS

./: CMakeLists.txt  LICENCE.TXT  Picnic.cmake  README.TXT  README.md
Cmake-options/: CompilerWarnings.cmake  README.md
Common/: Clock_utils.cpp  Group_authpaths.cpp  Hash2_32.cpp  Hash2_64.cpp  Hbgs_issuer.cpp  Io_utils.cpp  Lowmc32.cpp  Lowmc64.cpp  Merkle_tree.cpp  Mfors_tree.cpp  Mpc_base_authpath.cpp  Mpc_hash1.cpp  Mpc_hash2.cpp  Mpc_lowmc.cpp  Mpc_lowmc64.cpp  Mpc_mfors_authpath.cpp  Mpc_mfors_full_paths.cpp  Mpc_node_address.cpp  Mpc_seeds_and_tapes.cpp  Mpc_sign_mfors.cpp  Mpc_signature_utils.cpp  Mpc_switch.cpp  Mpc_top_authpath.cpp  Mpc_tree_hash.cpp  Mpc_utils.cpp  Mpc_working_data.cpp  Picnic_mpc_functions.c
Generate_credential/: CMakeLists.txt  Generate_credential.cpp  Generate_credential.h
Generate_public_key/: CMakeLists.txt  Generate_public_key.cpp  Generate_public_key.h
HBGS_picnic/: Makefile  README.md  api.h  apitest  create_test_vectors  example  hash.c  hash.h  kdf_shake.h  lowmc_constants.h  macros.h  picnic.c  picnic.h  picnic3_impl.c  picnic3_impl.h  picnic_impl.c  picnic_impl.h  picnic_types.c  picnic_types.h  platform.h  tree.h  tree_test  unit_test
HBGS_picnic/NIST-KATs/: PQCgenKAT_sign.c  rng.h
HBGS_picnic/sha3/: Makefile
HBGS_picnic/sha3.old/: .Makefile.swp  KangarooTwelve.h  KeccakDuplex-common.h  KeccakDuplexWidth1600.h  KeccakDuplexWidth200.h  KeccakDuplexWidth400.h  KeccakDuplexWidth800.h  KeccakHash.h  KeccakP-1600-SnP.h  KeccakP-1600-opt64-config.h  KeccakP-1600-times2-SnP.h  KeccakP-1600-times4-SnP.h  KeccakP-1600-times8-SnP.h  KeccakP-200-SnP.h  KeccakP-400-SnP.h  KeccakP-800-SnP.h  KeccakP-800-opt32-config.h  KeccakPRG-common.h  KeccakPRGWidth1600.h  KeccakPRGWidth200.h  KeccakPRGWidth400.h  KeccakPRGWidth800.h  KeccakSponge-common.h  KeccakSpongeWidth1600.h  KeccakSpongeWidth200.h  KeccakSpongeWidth400.h  KeccakSpongeWidth800.h  Ket-common.h  KetJr.h  KetMj.h  KetMn.h  KetSr.h  Ketje-common.h  KetjeJr.h  KetjeMj.h  KetjeMn.h  KetjeSr.h  Keyak-common.h  Kravatte.h  KravatteModes.h  (+11 more)
Hbgs_group_sign/: CMakeLists.txt  Hbgs_group_sign.cpp  Hbgs_group_sign.h
Include/: Clock_utils.h  Group_authpaths.h  Hash2_32.h  Hash2_64.h  Hbgs_issuer.h  Hbgs_lowmc_hash.h  Hbgs_param.h  Hbgs_tracer.h  Hbgs_user.h  Io_utils.h  Lowmc32.h  Lowmc64.h  Mem_uint.h  Merkle_tree.h  Mfors_tree.h  Mpc_base_authpath.h  Mpc_hash1.h  Mpc_hash2.h  Mpc_lowmc.h  Mpc_lowmc64.h  Mpc_mfors_authpath.h  Mpc_mfors_full_paths.h  Mpc_node_address.h  Mpc_parameters.h  Mpc_seeds_and_tapes.h  Mpc_sign.h  Mpc_sign_mfors.h  Mpc_signature_utils.h  Mpc_switch.h  Mpc_top_authpath.h  Mpc_tree_hash.h  Mpc_utils.h  Mpc_verify.h  Mpc_working_data.h  Picnic_mpc_functions.h
